# zeeker-func

./: LICENSE  README.md  pyproject.toml  requirements.txt
n8n-workflows/: CNA_Mastodon_SG.json  Mothership_SG_Mastodon_SG.json  SG_Law_Cookies.json  SLW_Commentaries.json  SLW_Headlines.json  Straits_Times_Mastodon_SG.json
scripts/about_singapore_law/: README.md  main.py
scripts/pdpc_decisions/: main.py  pdpc_types.py
serverless/: project.yml
