[tool.poetry]
name = "zeeker-func"
version = "0.1.0"
description = ""
authors = ["houfu <houfu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
html5lib = "^1.1"
langchain-openai = "^0.1.3"
tiktoken = "^0.6.0"
chromadb = "^0.5.0"
langchain = "^0.1.16"
ckanapi = "^4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
